<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent">
	<ListView android:id="@+id/bookMarkList" 
		android:layout_height="fill_parent" 
		android:background="#ff333333"
		android:cacheColorHint="#00000000"
		android:layout_width="wrap_content"
		android:layout_weight="3"
		android:paddingTop="20px"/>
	<RelativeLayout android:id="@+id/fileList" 
		android:layout_height="fill_parent"
		android:layout_width="wrap_content"
		android:layout_weight="1">
		<TextView android:id="@+id/path_text" 
			android:layout_width="fill_parent"
			android:layout_height="40dip" 
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:textSize="14sp" 
			android:textColor="@drawable/white"
			android:layout_marginLeft="2px" 
			android:background="#ff222222"
			android:gravity="center_vertical"
			android:singleLine="true"
			android:ellipsize="end"/>
		<CheckBox android:id="@+id/selectAll"
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:text="@string/SelectAll"
			android:textSize="10sp"
			android:textColor="#ffffffff"
			android:visibility="gone"/>
		<LinearLayout android:id="@+id/belowButton"
			android:orientation="horizontal"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_alignParentBottom="true"
			android:visibility="gone"
			android:layout_marginTop="2px" 
			android:layout_marginLeft="2px" 
			android:background="#ff000000">
			<Button android:id="@+id/belowLeftbt"
					android:layout_height="50dp"
					android:layout_width="fill_parent"
					android:text="@string/paste"
					android:layout_weight="1"/>
			<Button android:id="@+id/belowRightbt"
					android:layout_height="50dp"
					android:layout_width="fill_parent"
					android:text="@string/Cancel"
					android:layout_weight="1"/>	
		</LinearLayout>
		<ListView android:id="@+id/list" 
			android:layout_width="fill_parent"
			android:layout_height="match_parent" 
			android:layout_below="@id/path_text"
			android:layout_above="@id/belowButton"
			android:layout_marginLeft="2px"/>
		<GridView android:id="@+id/grid" 
			android:layout_width="fill_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/path_text"
			android:layout_above="@id/belowButton"
			android:longClickable="true"
			android:columnWidth="60dp"
		    android:numColumns="auto_fit"
		    android:verticalSpacing="10dp"
		    android:horizontalSpacing="10dp"
		    android:stretchMode="columnWidth"
		    android:gravity="center"/>
	</RelativeLayout>
</LinearLayout>
